2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        Another typo fix. Apparently, I "fixed" the wrong line in the previous commit.

        * coding/coding-style.html:

2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        Fix a typo per Darin's comment.

        * coding/coding-style.html:

2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        Add a style guide rule for signed and unsigned int
        https://bugs.webkit.org/show_bug.cgi?id=96682

        Reviewed by Geoffrey Garen.

        Add a rule per http://lists.webkit.org/pipermail/webkit-dev/2012-September/022199.html.

        * coding/coding-style.html:

2012-08-30  Benjamin Poulain  <bpoulain@apple.com>

        Replace JSC::UString by WTF::String
        https://bugs.webkit.org/show_bug.cgi?id=95271

        Reviewed by Geoffrey Garen.

        Update the coding style to avoid mentioning a class that no longer exist.

        * coding/coding-style.html:

2012-08-09  Ryosuke Niwa  <rniwa@webkit.org>

        Address one more review comment.

        * building/checkout.html:

2012-08-09  Ryosuke Niwa  <rniwa@webkit.org>

        Recommend the use of https and mention git on building/checkout.html
        https://bugs.webkit.org/show_bug.cgi?id=93657

        Reviewed by Mark Rowe.

        This page was quite out-dated. Stop mentioning about how to install subversion on OS X 10.4
        because the paragraph right above it refers to buliding/tools.html for that.

        Recommend the use of HTTPS connection for the Subversion checkout and also mention how to
        checkout using a Git client.

        * building/checkout.html:

2012-07-27  Adam Barth  <abarth@webkit.org>

        Writing a blog post for new reviewers doesn't add value to the blog
        https://bugs.webkit.org/show_bug.cgi?id=92305

        Reviewed by Eric Seidel.

        Now that we have Peter posting weekly updates to the blog, having an
        announcement on the blog for each reviewer is more noise than signal.
