@@ -45,6 +45,14 @@
   </li>
 </ul>
 
+<h2>
+  Technical Talks
+</h2>
+<ul>
+  <li>
+    <a href="http://www.youtube.com/watch?v=RVnARGhhs9w">Rendering in WebKit</a> - Eric Seidel, Dec. 2009
+  </li>
+</ul>
 <?php
     include("../footer.inc");
 ?>
