@@ -1,3 +1,12 @@
+2012-10-29  Eric Seidel  <eric@webkit.org>
+
+        Technical Articles should link to an old talk I gave
+        https://bugs.webkit.org/show_bug.cgi?id=100624
+
+        Reviewed by Adam Barth.
+
+        * coding/technical-articles.html:
+
 2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>
 
         Another typo fix. Apparently, I "fixed" the wrong line in the previous commit.
